preparing for version update

--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -45,6 +45,7 @@
     # BuddyPress Resume Manager
     # Activity Link Preview
     # BP Attachments
+    # BuddyPress Member Review
 
 --------------------------------------------------------------*/
 
@@ -1150,7 +1151,7 @@ body:not(.buddyx-mediapress) .mfp-arrow:after {
 
 body:not(.buddyx-mediapress) .mfp-arrow-left:after,
 body:not(.buddyx-mediapress) .mfp-arrow-right:after {
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-size: 24px;
     font-weight: 900;
     color: #fff;
@@ -1772,7 +1773,7 @@ input#rt_media_comment_submit {
 
 li.load-more a.loading::after {
     content: "\f110";
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-size: 18px;
     font-weight: 900;
     line-height: 1;
@@ -1785,7 +1786,7 @@ li.load-more a.loading::after {
 
 .buddypress .buddypress-wrap .generic-button .loading:not(.bp-tooltip):after {
     content: "\f110";
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-size: 18px;
     font-weight: 900;
     line-height: 1;
@@ -5306,7 +5307,7 @@ button.ges-change:hover {
 .bpfb_actions_container:not(.bpfb-theme-round):not(.bpfb-theme-new) #bpfb_addPhotos::before,
 .bpfb_actions_container:not(.bpfb-theme-round):not(.bpfb-theme-new) #bpfb_addVideos::before,
 .bpfb_actions_container:not(.bpfb-theme-round):not(.bpfb-theme-new) #bpfb_addLinks::before {
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-weight: 900;
     font-size: 18px;
 }
@@ -5859,4 +5860,11 @@ body.personal.attachments #bp-media-library .media-toolbar-primary .components-s
 
 .components-form-file-upload .components-button {
     height: 100%;
+}
+
+/*--------------------------------------------------------------
+## BuddyPress Member Review
+--------------------------------------------------------------*/
+.bupr-shortcode-top-members-contents {
+    margin: 0 0 2rem;
 }
