--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -549,7 +549,8 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 button[type=submit],
-a.read-more.button {
+a.read-more.button,
+button.button {
     font-family: inherit;
     font-size: inherit;
     color: var(--button-text-color);
@@ -589,7 +590,8 @@ input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
 button[type=submit]:hover,
-a.read-more.button:hover {
+a.read-more.button:hover,
+button.button:hover {
     color: var(--button-text-hover-color);
     background-color: var(--button-background-hover-color);
     border: 1px solid var(--button-border-hover-color);
@@ -1020,7 +1022,8 @@ body.admin-bar .site-header-wrapper.has-sticky-header {
 
     .buddyx-mobile-menu .dropdown-toggle:after {
         content: "\f107";
-        font-family: "FontAwesome";
+        font-family: "Font Awesome 6 Free";
+        font-weight: 900;
         font-size: 18px;
         border: 0;
     }
@@ -1233,7 +1236,7 @@ body.admin-bar .site-header-wrapper.has-sticky-header {
     .nav--toggle-sub li.menu-item-has-children::after,
     .nav--toggle-sub li.menu-item--has-toggle::after {
         content: "\f107";
-        font-family: FontAwesome;
+        font-family: 'Font Awesome 6 Free';
         display: inline-block;
         width: 12px;
         height: 20px;
@@ -1495,8 +1498,9 @@ body.admin-bar .site-header-wrapper.has-sticky-header {
 .menu-icons-wrapper #searchform:before {
     content: "\f002";
     position: absolute;
-    font-family: FontAwesome;
+    font-family: 'Font Awesome 6 Free';
     font-size: 14px;
+    font-weight: 900;
     right: 15px;
     top: 0;
     bottom: 0px;
@@ -1830,14 +1834,16 @@ body.admin-bar .site-header-wrapper.has-sticky-header {
 
 .nav-previous a::before {
     content: "\f104";
-    font-family: 'FontAwesome';
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
     display: inline-block;
     margin-right: 10px;
 }
 
 .nav-next a::after {
     content: "\f105";
-    font-family: 'FontAwesome';
+    font-family: 'Font Awesome 6 Free';
+    font-weight: 900;
     display: inline-block;
     margin-left: 10px;
 }
@@ -2544,7 +2550,7 @@ button.media-menu-item {
     position: absolute;
     left: 8px;
     top: 8px;
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-size: 30px;
     font-weight: 900;
     line-height: normal;
@@ -2838,7 +2844,7 @@ button.media-menu-item {
 
 .buddyx-quote-block .wp-block-quote:before {
     content: "\f10d";
-    font-family: "FontAwesome";
+    font-family: "Font Awesome 6 Free";
     font-weight: 900;
     color: #fff;
     margin-bottom: 20px;
