--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -19,6 +19,10 @@ textarea {
     line-height: var(--global-font-line-height);
 }
 
+button {
+    font-family: inherit;
+}
+
 
 /* stylelint-enable */
 
